module(name = 'ttools', version = '0.0.1')

# Build dependencies.
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_python", version = "0.31.0")

# FTXUI
bazel_dep(name = "ftxui", version = "6.1.9")

# Hedron's Compile Command Extractor for Bazel
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
  module_name = "hedron_compile_commands",
  remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
  commit = "abb61a688167623088f8768cc9264798df6a9d10",
)
