load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
package(default_visibility = ["//visibility:private"])

cc_library(
  name = "timer",
  srcs = ["libs/timer.cc"],
  hdrs = ["libs/timer.h"],
)

cc_library(
  name = "parser",
  srcs = ["libs/parser.cc"],
  hdrs = ["libs/parser.h"],
  deps = [":timer"],
)

cc_binary(
  name = "tomodoro",
  srcs = ["main.cc"],
  deps = [
    ":timer",
    ":parser",
  ],
)
